# FFTRadialIntensity

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  SAXSsim_cpp.m
apps/: CMakeLists.txt
apps/Cli/: CMakeLists.txt  SAXSsim_functional.cpp  prog_options.h
apps/Cli/test/: CMakeLists.txt
apps/Qt/: CMakeLists.txt  mainQT.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_halfway.cpp  mainwindow_halfway.h  newdialog.cpp  newdialog.h  newdialog.ui  radialtabwidget.cpp  radialtabwidget.h  radialtabwidget.ui  radialtabwidget_widget.cpp  radialtabwidget_widget.h  radialtabwidget_widget.ui  scaleplotdialog.cpp  scaleplotdialog.h  scaleplotdialog.ui
apps/QtClass/: CMakeLists.txt  WorkerSim.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newdialog.h  resources.qrc
apps/RadialIntensity/: CMakeLists.txt  radial_intensity.cpp
apps/RadialIntensity/test/: CMakeLists.txt
apps/SingleImagesFromMontage/: CMakeLists.txt
build-release/resultsPaper/: carrageenanK832.R  carrageenanK832.plot  carrageenanNa851.R  carrageenanNa851.plot  carrageenanNa851Denoised.R  pectinAcid.R  pectinHomogeneous.R  pectinHomogeneousBinaryOtsu.R  pectinHomogeneousDenoised.R  pectinHomogeneousDenoised.plot  pectinSingleAll.R  pectinSingleMean.R
build-release/resultsPaper/singleImagesFromPectin/: p1_4  p2_2  p4_0  p4_1  p4_4
build-release/resultsPaper/singleImagesFromPectin/tikz/: pMEAN.tex
build-release/resultsPaper/tikz/: carrageenanK832.tex  carrageenanNa851.tex  pectinAcid.tex  pectinHomogeneous.tex  pectinHomogeneousDenoised.tex  resolutionDraw.tex
extra/: SAXSsim_cpp.m
extra/Docker/: Makefile
extra/Docker/0_base/: Dockerfile
extra/Docker/3_vtk/: Dockerfile
extra/Docker/4_itk/: Dockerfile
extra/Docker/5_app/: Dockerfile
extra/Docker/old/1_qt5/: Dockerfile
extra/Docker/old/2_cmake/: Dockerfile
extra/Docker/old/2_gcc7/: Dockerfile
extra/Docker/old/5_app/: Dockerfile
extra/Docker/xenial_app/: Dockerfile  Makefile
extra/Docker/xenial_deps/: Dockerfile
extra/Docker/xenial_itk/: Dockerfile
extra/Docker/xenial_linuxdeployqt/: Dockerfile  Makefile
extra/deploy/: FFTFromImage.desktop  SAXSsim.desktop
fixtures/: 5x5_fft_shifted.mha  disc20.tif  disc20_mod_square_fft.mha
include/: SAXSsim.h  is_complex_t.h  radial_intensity.h
resultsPaper/: carK_Montage_832.plot  carrageenanK832.R  carrageenanK832Denoised.R  carrageenanK832Denoised.plot  carrageenanNa851Denoised.plot  cryo_carrK001_13b.plot  pMEAN  pectinAcid.plot  pectinDenoised.R  pectinHomogeneousBinaryOtsuLocal.plot
resultsPaper/SAXSsimClass/: carrageenanNa851.R  pectinDenoised.plot  pectinHomogeneous.R  pectinHomogeneous.plot  pectinHomogeneousBinaryOtsu.plot
resultsPaper/SAXSsimClass/singleImagesFromPectin/: p0_2  p0_3  p1_1  p1_2  p2_0  p2_4  p3_0  p3_2  p3_3  p4_2
resultsPaper/SAXSsimClass/singleImagesFromPectin/tikz/: pMEAN.tex
resultsPaper/SAXSsimClass/tikz/: pectinAcid.tex
resultsPaper/denoising_links/: TV  blsgsm
resultsPaper/figures_jupyternb/: plotIq.py
resultsPaper/saxs/: Pectin1Acid_SAXS_1car200NaCl10A_1237_longMod.txt  Pectin1Acid_SAXS_1car200NaCl10A_good.txt  SummaryCarrageenans  pectinAcid_gel_Aus_data.txt
resultsPaper/singleImagesFromPectin/: p0_0  p0_1  p0_4  p1_0  p1_3  p2_1  p2_3  p3_1  p3_4  p4_3
resultsPaper/tem/: carK_Montage_833.plot  carNa_Montage_851.plot  pectin1_1045_homogeneous.plot  pectin1_Montage_1045.plot
resultsPaper/tikz/: carrageenanK832Denoised.tex  carrageenanNa851.tex  carrageenanNa851Denoised.tex  pectinHomogeneous.tex  singlePectin.tex
scripts/: mergeSaxsData.R  plotI-q.R  readIQdata.R  run_command_in_stack  save_images_from_stack.ijm
scripts/R/: mergeSaxsData.R  paperScript.R
scripts/d3/: .tern-project  config.js  data_handle.js  line_chart.html  package-lock.json  package.json
scripts/d3/data/: disc20_functional_plot2.csv
scripts/plotly/: linear_chart.py
scripts/python/: plotIq.py  saxs_fit_saxstem.py  test_plotIq.py
scripts/python/fixtures/: test.csv  test.plot
src/: CMakeLists.txt  SAXSsim.cpp  SAXSsim.h  main.cpp  prog_options.h  radial_intensity.cpp  test_SAXSsim.cpp
src/2D/: CMakeLists.txt  PixelCenterDistances.h  SAXSsim.cpp  SAXSsim.h  main.cpp  plotI-q.R  plotI-q.py  plotI-q.r  prog_options.h
src/2D/singleImagesFromMontage/: CMakeLists.txt  prog_options_singleImagesFromMontage.h  singleImagesFromMontage.cpp
src/2D/test/: CMakeLists.txt  test_SAXSsim.cpp
src/QT/: CMakeLists.txt  Q_DebugStream.h  QtMessenger.h  WorkerSim.cpp  WorkerSim.h  mainQT.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newdialog.cpp  newdialog.h  newdialog.ui  rdialog.cpp  rdialog.h  resources.qrc
src/R/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/Qt/: WorkerSim.h  rdialog.ui
src/apps/RadialIntensity/: CMakeLists.txt  SAXSsim_class.cpp
src/apps/RadialIntensity/test/: test_saxs_sim_functional.cpp
src/apps/SingleImagesFromMontage/: singleImagesFromMontage.cpp
src/fixtures/: 5x5_mod_square_fft.mha  5x5_mod_square_fft_shifted.mha  disc20_mod_square_fft_shifted.mha  disc20x5.tif
src/include/: image_functions.h  radial_intensity.h  saxs_sim_functional.h
src/scripts/: mergeSaxsData.R  plotI-q.R  plotI-q_SVG.R  run_command_in_stack  sum_stack_results.R
src/serialization/: x100_y100  x200_y200  x20_y20  x21_y21  x4_y4  x4_y5  x5_y5  x6144_y6144.REMOVED.git-id
src/src/: .SAXSsim.cpp.swo  .SAXSsim.h.swo  CMakeLists.txt  PixelCenterDistances.h  SAXSsim.cpp  SAXSsim.h  histo.h  main.cpp  plotI-q.py  prog_options.h
src/test/: CMakeLists.txt  test_SAXSsim.cpp  test_histo.cpp
src/test/fixtures/: 4x4.tiff  4x5.tiff  5x5.tiff
test/: CMakeLists.txt  test_SAXSsim.cpp
test/fixtures/: imgTiny.tiff
