SET( OpenCV_LIBS ${OpenCV_LIBS} PARENT_SCOPE )
SET( Boost_LIBRARIES ${Boost_LIBRARIES} PARENT_SCOPE )
SET( histo-header_LIBRARY ${histo-header_LIBRARY} PARENT_SCOPE)
SET( histo-header-boost_LIBRARY ${histo-header-boost_LIBRARY} PARENT_SCOPE)

add_library(SAXSsim SHARED SAXSsim.cpp )
target_link_libraries(SAXSsim PUBLIC ${histo-header-boost_LIBRARY} ${Boost_LIBRARIES})
add_executable(SAXSsim.exe main.cpp)
include_directories(${IPP_LIB_FOLDER})
target_link_libraries(SAXSsim.exe ${OpenCV_LIBS} )
# target_link_libraries(SAXSsim.exe ${OpenCV_LIBS} )
target_link_libraries(SAXSsim.exe SAXSsim)
message(status "** Libraries: ${OpenCV_LIBS}")
message(status "** Libraries: ${histo-header-boost_LIBRARY}")

